Convert some Value annotated classes to record and small update in test cases